Fix z-index for remove-top-bar

--- a/misc/remove-top-bar.css
+++ b/misc/remove-top-bar.css
@@ -18,7 +18,7 @@
     position: absolute !important;
     padding: 0 !important;
     right: 0 !important;
-    z-index: 101 !important;
+    z-index: 9999 !important;
 }
 
 .bar_c38106:not(.systemBar_c38106) > .title_c38106 {
